feat: implement UserBook domain with Google Books integration and refactor reading session tracking